--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -7,4 +7,4 @@ jobs:
   greeting:
     runs-on: ubuntu-latest
     steps:
-    - uses: lukaspersonal/demo-actions3@master
+    - uses: lukaspersonal/demo-actions3:master
