--- a/.github/workflows/ct.yml
+++ b/.github/workflows/ct.yml
@@ -44,8 +44,9 @@ jobs:
       # Run Linter against code base #
       ################################
       - name: Lint Code Base
-        uses: github/super-linter@v4.1.0
+        uses: github/super-linter@action-support
         env:
           VALIDATE_ALL_CODEBASE: false
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BRANCH: main
+          image: docker://ghcr.io/github/super-linter:slim-latest
