--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -7,7 +7,8 @@ on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches-ignore: main
-
+  release:
+    types: ['published']
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   Context-Info:
